# Lucid

./: .clang-format  .clang-tidy  .clangd  .cursorignore  .gitignore  AGENTS.md  CMakeLists.txt  build.py  pyrightconfig.json  readme.md  requirements.txt  setup.py  temp.md  test_format.c
attempts/hello_c_wasm/clang/: MESON_RESULTS.md  Makefile  README.md  README_MESON.md  add.c  build.py  build.sh  example_usage.py  meson.build  meson_options.txt  pyproject.toml  run.sh  test.sh
attempts/hello_c_wasm/clang/src/: add.c
attempts/hello_c_wasm/clang/tests/: test_add.c
c_candid/: CMakeLists.txt  README.md
c_candid/examples/: basic_usage.c  candid_style_usage.c
c_candid/oracle/: README.md  compare.py
c_candid/runtime/runtime/: readmd.md
c_candid/runtime/runtime/src/: arena.c  base.c  builder.c  coerce.c  deserializer.c  hash.c  header.c  leb128.c  subtype.c  type_env.c  type_table.c  types.c  value.c  value_serializer.c
c_candid/runtime/src/: c_candid_decode.c  c_candid_encode.c
c_candid/runtime/tests/: runtime_tests.c
cdk-c/: CANDID_BUILDER_API.md  CMakeLists.txt
cdk-c/c_candid/: CMakeLists.txt  Makefile  README.md
cdk-c/c_candid/examples/: basic_usage.c
cdk-c/c_candid/oracle/: smoke.py
cdk-c/c_candid/runtime/src/: c_candid_decode.c  c_candid_encode.c
cdk-c/c_candid/runtime/tests/: runtime_tests.c
cdk-c/examples/hello_lucid/: dfx.json  greet copy.c  greet.c
cdk-c/examples/hello_lucid/test/: download_pocketic.sh  t1_candid.py
cdk-c/include/: ic0.h  ic0_mock.h  ic_api.h  ic_args.h  ic_buffer.h  ic_c_sdk.h  ic_call.h  ic_candid.h  ic_candid_builder.h  ic_candid_did.h  ic_candid_registry.h  ic_entry_points.h  ic_http_request.h  ic_principal.h  ic_simple.h  ic_storage.h  ic_timer.h  ic_types.h  ic_wasi_polyfill.h  wasm_symbol.h
cdk-c/include/shim/: shim.h
cdk-c/scripts/: BUILD_PROCESS.md  build.py  generate_dfx.py
cdk-c/scripts/build_utils/: __init__.py  build_libic_wasi_polyfill.py  build_wasi2ic.py  builders.py  config.py  extract_candid.py  post_process.py  project_manager.py  readme.md  utils.py  verification.py  wasi_sdk.py  wasm_opt.py
cdk-c/scripts/build_utils/dfxjson/: generate_dfx.py
cdk-c/scripts/deprecated/: build.py  build_libic_wasi_polyfill.py  build_wasi2ic.py  merge_compile_commands.py  verification.py
cdk-c/src/: ic0_stub.c  ic_api.c  ic_args.c  ic_buffer.c  ic_call.c  ic_candid.c  ic_candid_registry.c  ic_http_request.c  ic_http_request_parse.c  ic_http_request_type.c  ic_principal.c  ic_storage.c  ic_timer.c  ic_wasi_polyfill.c  shim_common.c  shim_libc.c
cdk-c/src/c_candid/: SConstruct
cdk-c/src/c_candid/oracle/: README.md  compare.py  decode.py  encode.py  smoke.py
cdk-c/src/http/: ic_http_request.c  ic_http_request_build.c  ic_http_request_cost.c  ic_http_request_parse.c  ic_http_request_type.c
cdk-c/src/platform/ic/: shim_ic.c
cdk-c/src/platform/native/: shim_native.c
cdk-c/test/: CMakeLists.txt  README.md  test_candid_builder.c  test_ic_buffer.c  test_ic_candid.c  test_ic_principal.c  test_ic_storage.c  test_ic_storage_stub.c  test_shim.c  test_shim_libc.c
cdk_alloc/: CMakeLists.txt
cdk_alloc/include/idl/: cdk_alloc.h
cdk_alloc/src/: cdk_alloc.c
examples/: CMakeLists.txt  ICCanisterUtils.cmake
examples/adder/: CMakeLists.txt  adder.c  adder.did  dfx.json  greet.c  main_native.c
examples/canister_lifecycle/: CMakeLists.txt  can_life.c  canister_lifecycle.c  canister_lifecycle.did  dfx.json  greet.c  main_native.c
examples/hello_lucid/: CMakeLists.txt  dfx.json  greet.c  greet.did  hello_lucid.c  hello_lucid.did
examples/hello_lucid/test/: t1_candid.py  t1_raw.py
examples/hooks/: CMakeLists.txt  greet.c
examples/hooks_test/: CMakeLists.txt  dfx.json  hooks_test.c  hooks_test.did
examples/http_request/: CMakeLists.txt  README.md  dfx.json  http_get.c  http_request.c  http_request.did  test.py
examples/ic_time_test/: CMakeLists.txt  dfx.json  greet.c  ic_time_test.c
examples/inter-canister-call/: CMakeLists.txt  dfx.json  greet.c  greet.h  inter-canister-call.c  inter-canister-call.did  main_native.c
examples/inter-canister-call/test/: inter_call_test.py  result_example.md  t1_candid.py  test_support_pocketic.py  test_trigger_example.py
examples/llm_c/: CMakeLists.txt  dfx.json  llm_c.did
examples/llm_c/scripts/: quick_test.sh  smart_deploy.sh
examples/llm_c/src/canister/: canister_helpers.c  canister_helpers.h  llm_c.c
examples/llm_c/src/core/: gguf_loader.c  gguf_loader.h  inference.c  inference.h  model.c  model.h  sampler.c  sampler.h  tokenizer.c  tokenizer.h
examples/llm_c/src/interface/: platform.h  storage.h
examples/llm_c/src/model/: tokenizer.c  tokenizer.h  train_gpt2.c
examples/llm_c/src/tools/: run_gpt2.c
examples/llm_c/tests/: README_TESTING.md  TEST_LAYERS.md  __init__.py  conftest.py  test_chunk_correctness.py  test_llm_c.py  test_stable_memory_read.py
examples/llm_c/tests/c/: chunk_utils_test.c  test_assets.c
examples/llm_c/tests/integration/: test_assets.py  test_basic.py  test_inference.py
examples/llm_c/tests/unit/: test_asset_manager.py  test_chunk_utils.py  (+1 more)
examples/llm_c/tools/: find_max_chunk.py  run_infer.py
examples/low_mem_warn/: CMakeLists.txt  dfx.json  example_output.md  greet.c  low_mem_warn.c  low_mem_warn.did  tinyprintf.c
examples/my_canister/: CMakeLists.txt  dfx.json  greet.c
examples/records/: CMakeLists.txt  dfx.json  example_output.md  greet.c  main_native.c  records.c  records.did  records_test.py
examples/simd128_example/: CMakeLists.txt  dfx.json  simd128_example.c  simd128_example.did
examples/timer/: CMakeLists.txt  dfx.json  greet.c  timer.c  timer.did
examples/types_example/: CMakeLists.txt  dfx.json  greet.c  readme.md  te_test.py  test.md  types_example.did
test/c_candid/: CMakeLists.txt  test_complex_roundtrip.c  test_debug_print.c  test_http_args_full.c  test_http_candid.c  test_http_candid_simple.c  test_http_complete.c  test_prim_subset.c  test_record_subset.c  test_reference_service_func_subset.c  test_reference_subset.c  test_simple.c  test_simple_record.c  test_type_inference.c  verify_candid.py
(+112 files in other folders)
