[project]
name = "wasm-build-script"
version = "1.0.0"
description = "Modern Python build script for WASM projects"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0", 
    "pydantic>=2.0.0",
    "invoke>=2.0.0",
]

[project.optional-dependencies]
build = [
    "meson>=0.60.0",
    "ninja>=1.10.0",
]